light dark mode homepage font color issue fixed

--- a/assets/scss/homepage/welcome.scss
+++ b/assets/scss/homepage/welcome.scss
@@ -19,6 +19,7 @@
         h1 {
             font-size: 4rem;
             font-weight: bold;
+            color: #fff;
         }
 
         a.button {
