--- a/assets/scss/homepage/work.scss
+++ b/assets/scss/homepage/work.scss
@@ -20,10 +20,12 @@
         h2 {
             font-size: 3rem;
             font-weight: bold;
+            color: #fff;
         }
 
         p {
             font-size: 1.5rem;
+            color: #fff;
         }
 
         a.button {
